WebKit Objective-C classes should use weak delegates <https://webkit.org/b/231956> <rdar://problem/84416233>

Reviewed by Brent Fulgham.

* UIProcess/API/Cocoa/WKConnection.h:
* UIProcess/API/Cocoa/WKProcessGroup.h:
* UIProcess/API/mac/WKScrollViewMac.h:
- Change `delegate` property from `assign` to `weak` to document
  that WeakObjCPtr<> is used to store the value.

* UIProcess/ios/forms/WKFileUploadPanel.h:
- Change `delegate` property from `assign` to `weak` to make the
  instance variable weak.


Canonical link: https://commits.webkit.org/243300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284558 268f45cc-cd09-0410-ab3c-d52691b4dbfc